<resources>
    <string name="app_name">Animal Count</string>
    <string name="txtWhatsyourName">¿Cómo te llamas?</string>
    <string name="historialCAPS">HISTORIAL DE PARTIDAS</string>
    <string name="playCAPS">JUGAR</string>
    <string name="modeElection">¿Qué modo eliges?</string>
    <string name="txtResponse">Respuesta</string>
    <string name="comprobarCAPS">COMPROBAR</string>
    <string name="easyMode">Fácil</string>
    <string name="normalMode">Normal</string>
    <string name="extremeMode">Extremo</string>
    <string name="easyModeCAPS">FÁCIL</string>
    <string name="normalModeCAPS">NORMAL</string>
    <string name="extremeModeCAPS">EXTREMO</string>
    <string name="txtName">Nombre</string>
    <string name="txtPlayerDP">Jugador:</string>
    <string name="txtPoints">Puntos</string>
    <string name="txtPointsDP">Puntos:</string>
    <string name="txtVidas">Vidas</string>
    <string name="txtVidasDP">Vidas:</string>
    <string name="txtNameCAPS">NOMBRE</string>
    <string name="txtPointsCAPS">PUNTOS</string>
    <string name="errorCAPS">ERROR</string>
    <string name="correctCAPS">CORRECTO</string>
    <string name="loseText">Oh no, ¡Te quedaste sin vidas!</string>
    <string name="replay">VOLVER A JUGAR</string>
    <string name="changeMode">CAMBIAR MODO</string>
    <string name="mainMenu">MENÚ PRINCIPAL</string>
    <string name="levelUp">SUBES DE NIVEL</string>
    <string name="level1Easy">¡Ahora habrá sumas y restas!</string>
    <string name="level1Normal">¡Ahora hay sumas, restas y multiplicaciones!</string>
    <string name="level2Normal">¡Ahora hay sumas, restas,multiplicaciones y divisiones!</string>
    <string name="txtInfoEasy1">- Operaciones con una cifra</string>
    <string name="txtInfoEasy2">- Las restas nunca dan negativo</string>
    <string name="txtInfoEasy3">- Primer nivel (hasta 10 puntos) solo sumas</string>
    <string name="txtInfoEasy4">- Segundo nivel (más de 10 puntos) se añaden restas</string>
    <string name="txtInfoNormal3">- Las divisiones son exactas</string>
    <string name="txtInfoNormal4">- Primer nivel (hasta 10 puntos) sumas y restas</string>
    <string name="txtInfoNormal5">- Segundo nivel (de 10 a 30 puntos) se añaden multiplicaciones</string>
    <string name="txtInfoNormal6">- Tercer nivel (más de 30 puntos) se añaden divisiones</string>
    <string name="txtInfoExtreme1">- Sumas y restas con 2 cifras</string>
    <string name="txtInfoExtreme2">- Las restas pueden dar negativo</string>
    <string name="txtInfoExtreme4">- Solo tienes una vida!</string>
</resources>